Fixed recipe providers.